--- a/Team Nova/itinerary.html
+++ b/Team Nova/itinerary.html
@@ -1,136 +1,141 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>EaseJourney - Tourism Transport & Logistics</title>
+  <title>EaseJourney - Stylish Tourism Transport & Logistics</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto+Slab&family=Montserrat:wght@700&display=swap" rel="stylesheet">
   <style>
     body {
-      background-color: #f8f9fa;
-      overflow-x: hidden;
+      background: linear-gradient(to right, #c9d6ff, #e2e2e2);
       font-family: 'Poppins', sans-serif;
+      color: #333;
     }
 
     header {
-      background-image: url('https://static.toiimg.com/photo/63282406.cms');
-      background-size: cover;
-      background-position: center;
-      color: black;
-      padding: 100px 20px;
+      background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://static.toiimg.com/photo/63282406.cms') center/cover no-repeat;
+      color: #fff;
+      padding: 140px 20px;
       text-align: center;
-      animation: fadeIn 2s;
-      border-radius: 15px;
+      border-bottom-left-radius: 80px;
+      border-bottom-right-radius: 80px;
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.4);
+    }
+
+    header h1 {
+      font-size: 3.8rem;
+      text-shadow: 4px 4px 8px rgba(0, 0, 0, 0.7);
+      font-family: 'Montserrat', sans-serif;
+    }
+
+    nav.navbar {
+      background: linear-gradient(to right, #4e54c8, #8f94fb);
     }
 
     section {
-      border-radius: 15px;
+      border-radius: 30px;
       padding: 60px 30px;
-      margin: 20px auto;
-      background-color: rgba(0, 0, 0, 0.5);
-      color: #fff;
+      margin: 50px auto;
+      background-color: #fff;
+      box-shadow: 0 15px 35px rgba(0, 0, 0, 0.2);
+      transition: transform 0.4s, box-shadow 0.4s;
     }
 
-    #services, #booking, #trip, #contact {
-      background-size: cover;
-      background-attachment: fixed;
-      animation: slideIn 2s;
+    section:hover {
+      transform: translateY(-10px);
+      box-shadow: 0 20px 50px rgba(0, 0, 0, 0.3);
     }
-
-    #services { background-image: url('https://images.unsplash.com/photo-1504215680853-026ed2a45def'); }
-    #booking { background-image: url('https://images.unsplash.com/photo-1556745757-8d76bdb6984b'); }
-    #trip { background-image: url('https://images.unsplash.com/photo-1506976785307-8732e854ad71'); }
-    #contact { background-image: url('https://images.unsplash.com/photo-1470770903676-69b98201ea1c'); }
 
     .card {
-      background-color: rgba(255, 255, 255, 0.9);
-      color: #333;
-      border-radius: 15px;
-      transition: transform 0.3s, box-shadow 0.3s;
+      background: linear-gradient(to right, #36d1dc, #5b86e5);
+      color: #fff;
+      border-radius: 20px;
       border: none;
+      box-shadow: 0 10px 25px rgba(0,0,0,0.3);
+      transition: transform 0.4s, box-shadow 0.4s;
     }
 
     .card:hover {
-      transform: translateY(-10px);
-      box-shadow: 0 8px 16px rgba(0,0,0,0.3);
+      transform: scale(1.08);
+      box-shadow: 0 20px 40px rgba(0,0,0,0.4);
+    }
+
+    .btn-light {
+      background: linear-gradient(to right, #4e54c8, #8f94fb);
+      color: #fff;
+      padding: 16px 32px;
+      border-radius: 50px;
+      font-weight: 700;
+      border: none;
+      transition: background-color 0.4s, transform 0.3s;
+    }
+
+    .btn-light:hover {
+      background: linear-gradient(to right, #8f94fb, #4e54c8);
+      transform: translateY(-5px);
+    }
+
+    h2 {
+      font-weight: 800;
+      color: #4e54c8;
+      text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+      font-family: 'Montserrat', sans-serif;
     }
 
     .form-control, .form-select, textarea.form-control {
       background-color: #fff;
-      border-radius: 10px;
-      padding: 12px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-      transition: background-color 0.3s, box-shadow 0.3s;
-      border: 1px solid #ced4da;
+      border-radius: 15px;
+      padding: 16px;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+      border: 1px solid #ddd;
+      transition: 0.4s;
     }
 
     .form-control:focus, .form-select:focus, textarea.form-control:focus {
-      background-color: #e0f0ff;
-      box-shadow: 0 4px 8px rgba(0,123,255,0.3);
-      border-color: #0d6efd;
-    }
-
-    button.btn-light {
-      background-color: #0d6efd;
-      color: #fff;
-      padding: 12px 24px;
-      border-radius: 25px;
-      font-weight: bold;
-      transition: background-color 0.3s, transform 0.3s;
-    }
-
-    button.btn-light:hover {
-      background-color: #0b5ed7;
-      transform: translateY(-3px);
-    }
-
-    label {
-      font-weight: 600;
-    }
-
-    footer {
-      background-color: #0d6efd;
-      color: #fff;
-      font-weight: 500;
-    }
-
-    @keyframes fadeIn {
-      from { opacity: 0; }
-      to { opacity: 1; }
-    }
-
-    @keyframes slideIn {
-      from { transform: translateY(50px); opacity: 0; }
-      to { transform: translateY(0); opacity: 1; }
+      background-color: #e3e8ff;
+      box-shadow: 0 4px 20px rgba(78, 84, 200, 0.4);
+      border-color: #4e54c8;
     }
 
     .counter {
-      font-size: 2rem;
-      font-weight: bold;
-      color: #fff;
+      font-size: 2.2rem;
+      font-weight: 900;
+      color: #4e54c8;
+      font-family: 'Roboto Slab', serif;
     }
 
     .counter-box {
-      background: rgba(0,0,0,0.6);
-      border-radius: 15px;
-      padding: 20px;
+      background: #e3e8ff;
+      border-radius: 20px;
+      padding: 30px;
       margin-top: 20px;
       text-align: center;
-      transition: transform 0.3s, box-shadow 0.3s;
+      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.15);
+      transition: transform 0.4s;
     }
 
     .counter-box:hover {
-      transform: scale(1.05);
-      box-shadow: 0 8px 16px rgba(0,0,0,0.3);
+      transform: scale(1.1);
+      box-shadow: 0 15px 40px rgba(0, 0, 0, 0.3);
+    }
+
+    footer {
+      background: linear-gradient(to right, #4e54c8, #8f94fb);
+      color: #fff;
+      padding: 30px 0;
+      text-align: center;
+      border-top-left-radius: 80px;
+      border-top-right-radius: 80px;
+      box-shadow: 0 -8px 30px rgba(0, 0, 0, 0.4);
     }
   </style>
 </head>
 
 <body>
 
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">EaseJourney</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -139,18 +144,18 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item"><a class="nav-link active" href="#home">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
-          <li class="nav-item"><a class="nav-link" href="#booking">Booking</a></li>
+          <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
+          <li class="nav-item"><a class="nav-link" href="booking.html">Booking</a></li>
           <li class="nav-item"><a class="nav-link" href="index.html">Itinerary Generator</a></li>
-          <li class="nav-item"><a class="nav-link" href="#trip">Plan Your Trip</a></li>
-          <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+          <li class="nav-item"><a class="nav-link" href="plan.html">Plan Your Trip</a></li>
+          <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
         </ul>
       </div>
     </div>
   </nav>
 
   <header id="home">
-    <h1><b><u>Welcome to EaseJourney</u></b></h1>
+    <h1><b>Welcome to EaseJourney</b></h1>
     <p>Your personalised travel architect</p>
   </header>
 
@@ -287,13 +292,12 @@
     </form>
   </section>
 
-  <footer class="text-center p-3">
-    &copy; 2025 TravelEase | All rights reserved
+  <footer>
+    <p>&copy; 2025 TravelEase | All rights reserved</p>
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <script>
-    // Counter Animation
     const counters = document.querySelectorAll('.counter');
     counters.forEach(counter => {
       const updateCount = () => {
@@ -310,6 +314,7 @@
       updateCount();
     });
   </script>
+
 </body>
 
 </html>
