--- a/Idiotics/loginpage2.html
+++ b/Idiotics/loginpage2.html
@@ -196,5 +196,22 @@
             </div>
         </div>
     </div>
+    <script>
+       document.addEventListener('DOMContentLoaded', function() {
+    document.getElementById('login-form').addEventListener('submit', function(e) {
+        e.preventDefault(); 
+        const email = document.getElementById('email-address').value;
+        const password = document.getElementById('password').value;
+
+        
+        if (email === "test@example.com" && password === "123456") {
+            console.log("Login successful, redirecting...");
+            window.location.href = "naya index.html"; 
+        } else {
+            alert("Invalid email or password"); 
+        }
+    });
+});
+    </script>
 </body>
 </html>
